<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.kevincampos.presentation.VehicleDetailViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_05"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:onClick="@{() -> viewModel.closeScreen()}"
                        android:padding="16dp"
                        android:src="@drawable/ic_close" />

                    <TextView
                        android:id="@+id/bid_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/vehicle_profile"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:padding="16dp"
                        android:src="@drawable/ic_help" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="16dp"
                        android:tint="@color/white"
                        app:imageDrawable="@{viewModel.uiState.vehicleWithPolicies.getMakeIcon(context)}"
                        tools:src="@drawable/carlogo_mercedes" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.uiState.vehicleWithPolicies.make}"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:text="MINI" />

                        <!-- TODO: Add plate font -->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.uiState.vehicleWithPolicies.prettyVrm}"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="LB07 SEO" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_policies"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.uiState.vehicleWithPolicies.policiesCount}"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        tools:text="1" />

                </LinearLayout>

                <android.support.design.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    goneUnless="@{viewModel.uiState.vehicleWithPolicies.hasActivePolicy}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/extend_action"
                    android:textAppearance="?textAppearanceBody2" />

                <android.support.design.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    visibleUnless="@{viewModel.uiState.vehicleWithPolicies.hasActivePolicy}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/insure_action"
                    android:textAppearance="?textAppearanceBody2"
                    tools:visibility="gone" />

            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    goneUnless="@{viewModel.uiState.vehicleWithPolicies.hasActivePolicy}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/active_driving_policy"
                    android:textColor="@color/dark_indigo"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView
                    goneUnless="@{viewModel.uiState.vehicleWithPolicies.hasActivePolicy}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="16dp"
                            android:text="@string/active_policy"
                            android:textColor="@color/text_default"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <!-- TODO: Add progress -->

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/time_remaining"
                                    android:textColor="@color/text_default" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@{viewModel.uiState.vehicleWithPolicies.readableRemainTime}"
                                    android:textColor="@color/text_default"
                                    tools:text="44 mins" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal">

                            <android.support.design.button.MaterialButton
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="8dp"
                                android:layout_weight="1"
                                android:text="@string/policy"
                                android:textAppearance="?textAppearanceBody2"
                                android:textColor="@color/indigo"
                                app:icon="@drawable/ic_policy"
                                app:iconGravity="textStart"
                                app:iconTint="@color/indigo" />

                            <android.support.design.button.MaterialButton
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="16dp"
                                android:layout_weight="1"
                                android:text="@string/get_help"
                                android:textAppearance="?textAppearanceBody2"
                                android:textColor="@color/red"
                                app:icon="@drawable/ic_help_outline"
                                app:iconGravity="textStart"
                                app:iconTint="@color/red" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    goneUnless="@{viewModel.uiState.vehicleWithPolicies.hasInactivePolicy}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/previous_driving_policies"
                    android:textColor="@color/dark_indigo"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/policy_list"
                    goneUnless="@{viewModel.uiState.vehicleWithPolicies.hasInactivePolicy}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_policy" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>