<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vehicle"
            type="me.kevincampos.presentation.model.VehicleWithPoliciesView" />

    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:imageDrawable="@{vehicle.getMakeIcon(context)}"
                    tools:src="@drawable/carlogo_mercedes" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{vehicle.make}"
                        android:textColor="@color/text_default"
                        android:textStyle="bold"
                        tools:text="MINI" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{vehicle.color}"
                        android:textColor="@color/text_default"
                        tools:text="Blue Cooper" />

                </LinearLayout>

                <android.support.design.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    goneUnless="@{vehicle.hasActivePolicy}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/extend_action"
                    android:textAppearance="?textAppearanceBody2" />

                <android.support.design.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    visibleUnless="@{vehicle.hasActivePolicy}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/insure_action"
                    android:textAppearance="?textAppearanceBody2"
                    tools:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reg_plate"
                        android:textColor="@color/green_text"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vehicle.prettyVrm}"
                        android:textColor="@color/green_text"
                        android:textStyle="bold"
                        tools:text="EF51 ZNN" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_policies"
                        android:textColor="@color/green_text"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vehicle.policiesCount}"
                        android:textColor="@color/green_text"
                        android:textStyle="bold"
                        tools:text="1" />

                </LinearLayout>

                <!-- For now, this third column is not in use -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <View
                visibleUnless="@{vehicle.hasActivePolicy}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                goneUnless="@{vehicle.hasActivePolicy}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@color/blue_10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@{vehicle.readableRemainTime}"
                    android:textColor="@color/green_text"
                    tools:text="1 day, 14 hours, 22 mins" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</layout>